[package]
name = "monosodium"
version = "0.1.0-pre.0"
edition = "2018"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Plain bindings to libsodium"
documentation = "https://docs.rs/monosodium"
repository = "https://github.com/peterhj/monosodium"
readme = "README.md"
keywords = ["libsodium", "sodium"]

[features]
default = []
fresh = ["bindgen"]

[build-dependencies]
bindgen = { version = "^0.47", optional = true }
